BMSSimplificationEclipseWS/EUFULL-Org-Backup/src/objects/Requirement_vod__c.object
<CustomObject>
    <description>PMO Toolkit - used to capture User, Business and Functional Requirements</description>
    <fields>
        <fullName>Access_BMS_EMEA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Access</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Actual_Adapt_Ongoing_Support__c</fullName>
        <description>Number of days estimated for Adaptation and Ongoing Support.</description>
        <inlineHelpText>Number of days estimated for Adaptation and Ongoing Support.</inlineHelpText>
        <label>Actual Adapt &amp; Ongoing Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Build_Unit_Test__c</fullName>
        <label>Actual Build &amp; Unit Test</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Design__c</fullName>
        <label>Actual Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Hours__c</fullName>
        <label>Actual Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Requirements_Gathering__c</fullName>
        <label>Actual Requirements Gathering</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_SIT__c</fullName>
        <label>Actual SIT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Train_Deploy__c</fullName>
        <label>Actual Train/Deploy</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_UAT__c</fullName>
        <label>Actual UAT</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Adapt__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for Adaptation and Ongoing Support.</description>
        <inlineHelpText>Number of days estimated for Adaptation and Ongoing Support.</inlineHelpText>
        <label>Adapt &amp; Ongoing Support</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Approved_BMS_EMEA__c</fullName>
        <description>Created for BMS EMEA so the default value is always &quot;None&quot; instead of False.</description>
        <label>Approved BMS Global?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <label>Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Approved__c</fullName>
        <label>Approved?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Assigned_To_Picklist_BMS__c</fullName>
        <label>Assigned To</label>
        <picklist>
            <picklistValues>
                <fullName>BMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Associated_Vendor_Enhancement_Reqmt_ID__c</fullName>
        <description>The Requirement: Requirement ID of the Vendor Enhancement that the Requirement is dependent on.  If Vendor Enhancement is completed then Associated Requirement should be met</description>
        <label>Associated Vendor Enhancement: Reqmt ID</label>
        <length>70</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BRD_Version_BMS_EMEA__c</fullName>
        <label>BRD Version</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BUT__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated to complete Build and Unit Test phase.</description>
        <inlineHelpText>Number of days estimated to complete Build and Unit Test phase.</inlineHelpText>
        <label>Build</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Build_Assigned_to__c</fullName>
        <description>This field value contains the value to whom this CR is assigned.</description>
        <label>Assigned to</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_ID__c</fullName>
        <description>Contains the Build ID component that the requirements are tied to</description>
        <inlineHelpText>Contains the Build ID component that the requirements are tied to</inlineHelpText>
        <label>Build ID</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Build_Priority_BMS_EMEA__c</fullName>
        <description>Priority defined within Veeva to tackle priorities</description>
        <label>Build Priority</label>
        <picklist>
            <picklistValues>
                <fullName>3 - Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1 - High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Build_Status__c</fullName>
        <label>Build Status</label>
        <picklist>
            <picklistValues>
                <fullName>Review Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Build Documentation Completed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Test in Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Unit Test Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Benefit_Value__c</fullName>
        <description>Value is calculated by the selection of the Business Benefit field.</description>
        <formula>CASE(
 Business_Benefit__c ,
 &quot;HIGH&quot; , 3,
 &quot;MEDIUM&quot;, 2,
&quot;Low&quot;, 1,
0
)</formula>
        <inlineHelpText>Value is calculated by the selection of the Business Benefit field: 
High = 3 
Medium = 2 
Low = 1</inlineHelpText>
        <label>Business Benefit Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Business_Benefit__c</fullName>
        <inlineHelpText>Low: Does Not Drive Revenue or Reduce Costs 
Medium: Drives Revenue or Reduces Costs (quantify amount, if possible) 
High: Drives Revenue and Reduces Costs (quantify amount for both, if possible)</inlineHelpText>
        <label>Business Benefit</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Priority_BMS_EMEA__c</fullName>
        <label>Business Priority</label>
        <picklist>
            <picklistValues>
                <fullName>1 - Nice to Have</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2 - Should Have</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3 - Must Have</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Business_Requirement_Area__c</fullName>
        <label>Business Requirement Area</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Business_Requirement_ID__c</fullName>
        <label>Related Business Requirement ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Capacity_Type__c</fullName>
        <inlineHelpText>Defect: A known error in existing functionality 
Major: A significant release of capabilities 
Minor: An impactful release of functionality &amp; doesn&apos;t require training on new functionality
Ongoing Activity: Activities that need to be performed regularly</inlineHelpText>
        <label>Capacity Type</label>
        <picklist>
            <picklistValues>
                <fullName>Defect</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Major</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minor</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ongoing Activity</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Capture_Date_BMS_EMEA__c</fullName>
        <inlineHelpText>During which phase and for which scope the req was captured?</inlineHelpText>
        <label>Capture Date</label>
        <picklist>
            <picklistValues>
                <fullName>Core</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wave 3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Change_Control__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Control</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Change_Request__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Change Request</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Closed_Deferred__c</fullName>
        <label>Reason Closed/Deferred</label>
        <picklist>
            <controllingField>Status_PMO__c</controllingField>
            <picklistValues>
                <fullName>Deferred: Waiting Architecture Availabiity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred: Product Enhancement Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Deferred: Waiting Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Architecturally Not Recommended</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Business Process</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Canceled by Business</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Duplicate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Technically Not Feasible</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed: Existing Functionality</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <inlineHelpText>Please insert Comments as follows:
&lt;Name&gt; - &lt;Date&gt; - &lt;Comments&gt;

If you are Closing a Requirement, please include the following:
- Decison Rationale
- Decision Date
- Decision Maker</inlineHelpText>
        <label>Comments</label>
        <length>32000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Cont__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Overall Contingency allowed.</description>
        <inlineHelpText>Overall Contingency allowed in percentage.</inlineHelpText>
        <label>Overall Contingency(%)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Core_eligible_BMS_EMEA__c</fullName>
        <label>Core eligible?</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Count_of_Approved_Releases__c</fullName>
        <formula>IF( ISPICKVAL( Status_PMO__c , &quot;Approve: Approved to Deploy&quot;) , 1, 0)</formula>
        <label>Count of Approved Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Count_of_Deployed_Requests__c</fullName>
        <formula>IF(ISPICKVAL( Status_PMO__c , &quot;Close: Deployed&quot;),1, 0)</formula>
        <label>Count of Deployed Requests</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Countries_BMS_EMEA__c</fullName>
        <inlineHelpText>For Country-specific countries only.</inlineHelpText>
        <label>Countries</label>
        <picklist>
            <picklistValues>
                <fullName>All EU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FOT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>RU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UKI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All MEA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Israel</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Levante</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maghreb</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gulf</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Saudi Arabia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>South Africa</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Country_BMS__c</fullName>
        <label>Country</label>
        <picklist>
            <controllingField>Region_BMS__c</controllingField>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>China</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>France</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Germany</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ireland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italy</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>United Kingdom</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Criticality__c</fullName>
        <label>Criticality</label>
        <picklist>
            <picklistValues>
                <fullName>Nice to Have</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Urgent</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Customer_Service_UPSA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>VPRO UPSA June-2014: needed for UPSA specific requirements</description>
        <label>Customer Service</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Data_Integration_Complexity__c</fullName>
        <label>Data Integration Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Date_Requested__c</fullName>
        <label>Date Requested</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Date__c</fullName>
        <label>Decision Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Decision_Maker__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Decision Maker</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Requirements</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Decision_Rationale__c</fullName>
        <label>Decision Rationale</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Des__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Number of days estimated for the Design phase.</description>
        <inlineHelpText>Number of days estimated for the Design phase.</inlineHelpText>
        <label>Design</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Design_ID__c</fullName>
        <label>Design ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Design_Review_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Design Review Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Design_Status__c</fullName>
        <label>Design Status</label>
        <picklist>
            <picklistValues>
                <fullName>Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partially Met</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Initial Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Detail Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Final Design</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Design Documentation Completed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>End_User_Impact_Value__c</fullName>
        <description>Value is calculated by the User Impact of Change field.</description>
        <formula>CASE(
 End_User_Impact__c ,
 &quot;HIGH&quot; , 1,
 &quot;MEDIUM&quot;, 2,
&quot;Low&quot;, 3,
0
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Value is calculated by the User Impact of Change field.</inlineHelpText>
        <label>End User Impact Value</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>End_User_Impact__c</fullName>
        <inlineHelpText>Will Minimally Impact End Users (i.e., high degree of adoption achieved with little  to no effort)</inlineHelpText>
        <label>End User Impact</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Enhancement_Description_BMS__c</fullName>
        <label>Enhancement Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Enterprise_Request__c</fullName>
        <formula>IF(
AND(
INCLUDES(Impacted_Business__c , &quot;Primary Care&quot;), 
INCLUDES (Impacted_Business__c, &quot;Speciality&quot;), 
INCLUDES (Impacted_Business__c, &quot;Oncology&quot;), 
INCLUDES (Impacted_Business__c, &quot;EBPU&quot;), 
INCLUDES (Impacted_Business__c, &quot;P4&quot;)),  
1, 0)</formula>
        <label>Enterprise Request?</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Escalation_Reasons_BMS_EMEA__c</fullName>
        <inlineHelpText>Explain why the Core Change Request is esclated to STC.</inlineHelpText>
        <label>Escalation Reasons</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Estimated_Build_Complete_Date__c</fullName>
        <description>Estimated date when this component of Build is completed and is ready for Code Review</description>
        <inlineHelpText>Estimated date when this component of Build is completed and is ready for Code Review</inlineHelpText>
        <label>Estimated Build Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Hours__c</fullName>
        <label>Estimated Hours</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimation_Assumptions__c</fullName>
        <inlineHelpText>Describe all assumptions made in order to estimate the Requirement. If contingency is used also describe how much and why.</inlineHelpText>
        <label>Estimation Assumptions</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Exploria_Complexity__c</fullName>
        <label>Exploria Complexity</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_ID_BMS__c</fullName>
        <externalId>true</externalId>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Field_Label_BMS__c</fullName>
        <label>Field Label</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Functional_Area_BMS__c</fullName>
        <label>Functional Area</label>
        <picklist>
            <picklistValues>
                <fullName>Customer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Addresses</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Analytics</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Calls</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Homepage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Territory Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Home_Office_BMS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Home Office</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Impacted_Business__c</fullName>
        <label>Impacted Business Units</label>
        <picklist>
            <picklistValues>
                <fullName>Primary Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Oncology</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Immunoscience</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Transplant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Market Access</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>All</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Speciality</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EBPU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>P4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Technology</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Impacted_Group__c</fullName>
        <label>Impacted Streams</label>
        <picklist>
            <picklistValues>
                <fullName>Application</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CMEH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Change Management</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Exploria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IDL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OrgManager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Training</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Veeva</fullName>
            </picklistValues>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Individual_Notified__c</fullName>
        <label>Individual Notified</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Initial_Priority__c</fullName>
        <label>Initial Priority</label>
        <picklist>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Low</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Emergency</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Initial_Rank__c</fullName>
        <label>Initial Rank</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Integration_Impact_BMS_EMEA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Created by TT 9/27/2013. Checks if the requirement will impact the Integration flows.</description>
        <label>Integration Impact</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>